MailZu-ng 0.12.mailzu-ng-php72-8b9c7c5+1 (12.12.2022)
---------
  - Merged administrators.
  - Removed functions formatTime() and minutes_to_hours(). These functions appear like leftovers
    from the scheduling days.
  - Added search capabilities to quarantine search panel. It now also supports "begins with", "doesn't
    begin with", "ends with" and ""doesn't end with" search options.

MailZu-ng 0.12.mailzu-ng-php72-37e0277+1 (12.12.2022)
---------
  - Merged administrators.

MailZu-ng 0.11.mailzu-ng-php72-194398f+1 (11.11.2021)
----------
 - changes are in commit message

MailZu-ng 0.11.mailzu-ng-php72-4d31f83+1 (08.11.2021)
----------
 - changes are in commit message

MailZu-ng 0.11.mailzu-ng-php72-f4e4e93+1 (08.11.2021)
----------
 - changes are in commit message

MailZu-ng 0.11.mailzu-ng-php72-8c13f3a dynamic hash version (08.11.2021):
----------
 - PHP Header clean-ups
 - should have auto-generated version in config/init.php

MailZu-ng 0.11.mailzu-ng-php72-8c13f3a-1 pre-dynamic hash version (05.11.2021):
----------
 - Fix loading composer's autoloader
 - Fix mailmime attachment parsing, Small bugfixes
 - Resolving issue #13 with old PHPMailer, which lead to re-structure classes and libs by switching to composer, and fixing #14
 - Add more useful cleanup queries, to remove already deleted spams from tables
 - Added mailzu-ng database cleanup script written in PHP also using PDO as database access
 - Better solution for handle partition_tag, if the amavisd config defines one
 - Possible workaround of maddr email not unique, hardcode SQL condition 'partition_tag = 0'

MailZu-ng 0.11.mailzu-ng-php72 (02.11.2021):
----------
 -  mailzu-ng-php72 the PHP 7.2 (and hopefully PHP 7.3) compatible rewrite branch
 -  Removed the included PEAR/DB package
 -  First try to rewrite class-loading, adding autoload.php
 -  Loading of class and lib files require ordering (until real autoloader for on demand classloading is implemented)